# mynd

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FEATURES.md  IMMICH_FEATURES_UPDATE.md  LICENSE  Makefile  NEXTCLOUD_API_INTEGRATIONS.md  PLUGIN_DEV.md  PROJECT_STRUCTURE.md  PR_SUMMARY.md  README.md  REORGANIZATION_FINAL_SUMMARY.md  SECURITY.md  TREE.txt  TREE_VISUAL.txt  analyze.py  app.py  calendar_manager.py  chat.py  database.py  debug_nextcloud.py  debug_photo_search.py  demo_batch_loading.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  document_parser.py  example_auth_usage.py  example_nextcloud_apis.py  find_assets_endpoint.py  find_immich_endpoints.py  get_immich_version.py  immich-api-endpoints.rtf  indexing_config.json  indexing_manager.py  knowledge_engine.py  new-api-endpoints.md  (+24 more)
.git-filter-repo/: replace.txt
.github/workflows/: ci.yml  deploy.yml
Frontend/: README.md  next.config.mjs  package-lock.json  package.json  ui.html
Frontend/app/: globals.css  layout.js  page.js
Frontend/components/: ContextDataCard.js  KnowledgeGraph.js  KnowledgeGraph.module.css  SourceCard.js  SuggestionsPanel.js  ThemeSelector.js
Frontend/hooks/: useLanguage.js  useTheme.js
app/: __init__.py  agent_loop.py  audit.py  auth.py  config.py  helpers.py  ollama_client.py  routes.py  scheduler.py  session_store.py  state.py
backend/: Dockerfile  requirements.txt
backend/config/: ai_config.example.json  ai_config.json.example  calendar_config.json.example  indexing_config.json.example  model_info.json  nextcloud_config.json  nextcloud_config.json.example  nina_config.json.example  openweather_config.json.example  users.example.json
backend/core/: app.py  database.py  security_hardening.py  security_utils.py
backend/templates/: index.html  knowledge_graph.html
core/: __init__.py  config.py  embed.py  llm.py  model.py  plugin_base.py  sandbox.py  scheduler.py  tools.py  utils.py  vault.py
data/: assistant_briefings.json  knowledge_graph.json
data/plugins/: affine.py  browser.py  composio.py  discord.py  email.py  homeassistant.py  immich.py  nextcloud.py  reolink.py  (+4 more)
docs/: ADMIN_SETUP.md  AUTONOMOUS_AGENT.md  BATCH_LOADING_GUIDE.md  BENUTZERHANDBUCH_AUTONOMOUS.md  CALENDAR_IMPROVEMENTS.md  IMMICH_COMPLETION.md  IMMICH_INTEGRATION.md  INFRASTRUCTURE.md  NEXTCLOUD_AUTH_PLUGIN.md  README.md  SECRETS.md  TALK_BOT_SETUP_GUIDE.md  nextcloud-talk-bot.md  technical_documentation.md
frontend/: Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
scripts/: demo_batch_loading.py  ingest.py  orchestrator.py  parse_docs.py  requirements.txt  run_app.py  sync_nextcloud.py  test_auth_unit.py  test_immich_direct.py
templates/: calendar_create.html  index.html  knowledge_graph.html
test_files/: fix_database.py  knowledge_graph_old.html
tests/: README.md  conftest.py  test_app_helpers.py  test_app_routes.py  test_auth_plugin.py  test_browser_plugin.py  test_browser_smoke.py  test_browser_v2.py  test_core_embed.py  test_core_llm.py  test_core_model.py  test_core_utils.py  test_immich_features.py  test_plugin_affine.py  test_plugin_ha.py  test_plugin_immich.py  test_plugin_python_exec.py  test_plugin_schemas.py  test_plugin_system.py  test_secrets_management.py  test_security_boundaries.py  test_security_hardening.py  test_session_store.py  test_vault.py
(+151 files in other folders)
