[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mynd-2new"
version = "0.1.0"
description = "KI-Assistent mit Smart-Home-Steuerung, Foto-Suche und persönlichem Wissensgraphen"
authors = [{ name = "Benedikt Schächner" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=5.0.0",
    "pillow>=10.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.5.0",
    "duckduckgo_search>=8.0.0",
    "APScheduler>=3.10.0",
    "tiktoken>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 200
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "single"

[tool.black]
line-length = 200
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true