[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mynd"
version = "0.1.0"
description = "Local-first AI workspace with chat, knowledge retrieval, automations, and integrations"
authors = [{ name = "Benedikt Schächner" }]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=5.0.0",
    "pillow>=10.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "chromadb>=1.5.0",
    "cryptography>=42.0.0",
    "defusedxml>=0.7.1",
    "ddgs>=1.0.0",
    "APScheduler>=3.10.0",
    "tiktoken>=0.5.0",
    "playwright>=1.40.0",
    "requests-oauthlib>=2.0.0",
    "lxml-html-clean>=0.4.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "data*"]
exclude = ["frontend*", "node_modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--ignore=tests/test_browser_plugin.py",
    "--ignore=tests/test_browser_v2.py",
]
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [
    "tests/test_browser_plugin.py",
    "tests/test_browser_v2.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "E501", # Gradually shorten legacy tool descriptions and embedded templates.
    "E701", # Gradually expand legacy one-line control flow.
    "F403", # core/__init__.py intentionally preserves its legacy public API.
]

[tool.ruff.lint.per-file-ignores]
"data/plugins/browser.py" = ["N802"]

[tool.ruff.format]
quote-style = "single"

[tool.black]
line-length = 200
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
